[gd_scene load_steps=7 format=3 uid="uid://dmtwk63vyvfnv"]

[ext_resource type="Script" path="res://game/enemies/witch/witch_zap.gd" id="1_g4a8y"]
[ext_resource type="Texture2D" uid="uid://b8shht3o6mjo3" path="res://assets/graphics/FlyingLevel/Zap.png" id="2_ri4v0"]
[ext_resource type="Script" path="res://components/move_component.gd" id="3_rd1a8"]
[ext_resource type="Script" path="res://components/move_components/move_steady_component.gd" id="4_4ryun"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="5_f7i1y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gect4"]
size = Vector2(22, 6)

[node name="WitchZap" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_g4a8y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ri4v0")

[node name="MoveComponent" type="Node" parent="."]
script = ExtResource("3_rd1a8")

[node name="MoveSteadyComponent" type="Node" parent="MoveComponent"]
script = ExtResource("4_4ryun")
speed = 50.0
direction = Vector2(-1, 0)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(5.96046e-08, 0)
rect = Rect2(-11, -3, 22, 6)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("5_f7i1y")
damage = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_gect4")
